# hephaestus

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .cmake-format.py  .dockerignore  .gitignore  .typos.toml  BUILD  CMakeLists.txt  CMakePresets.json  LICENSE  MODULE.bazel  Makefile  README.md  README.rst  WORKSPACE  asan_symbolize.py  buf.yaml  comparison_to_ros.md  dwyu_ignore_includes.json  liburing_fix.patch  out.txt  requirements.in  requirements.txt  requirements_lock.txt  watcher3.sh
cmake/module_template/: CMakeLists.txt  README.md
cmake/module_template/apps/: @module@_app.cpp  CMakeLists.txt
cmake/module_template/examples/: CMakeLists.txt  example.cpp
cmake/module_template/src/: @module@.cpp
cmake/module_template/tests/: tests.cpp
modules/bag/: BUILD  CMakeLists.txt  README.md  _BUILD
modules/bag/apps/: CMakeLists.txt  bag_player.cpp  bag_recorder.cpp
modules/bag/examples/: example.cpp
modules/bag/src/: topic_filter.cpp  writer.cpp  zenoh_player.cpp  zenoh_recorder.cpp  zenoh_recorder_subscribers_manager.cpp  zenoh_recorder_subscribers_manager.h
modules/bag/tests/: CMakeLists.txt  test.proto  test_proto_conversion.h  test_robot_type.proto  tests.cpp  topic_filter_tests.cpp
modules/base/: CMakeLists.txt  README.md
modules/base/examples/: example.cpp
modules/base/src/: exception.cpp  type_traits.cpp
modules/base/tests/: CMakeLists.txt  tests.cpp
modules/cli/: BUILD  CMakeLists.txt  README.md
modules/cli/examples/: example.cpp
modules/cli/src/: keyboard.cpp  program_options.cpp
modules/cli/tests/: CMakeLists.txt  program_options_tests.cpp
modules/concurrency/: BUILD  CMakeLists.txt  README.md
modules/concurrency/examples/: CMakeLists.txt  clock_drift.cpp  spinner_clock_drift.cpp  spinner_example.cpp
modules/concurrency/src/: channel.cpp  context.cpp  context_scheduler.cpp  io_ring.cpp  message_queue_consumer.cpp  queue_consumer.cpp  repeat_until.cpp  spinner.cpp  spinner_manager.cpp  spinner_state_machine.cpp  spinners_manager.cpp  timer.cpp
modules/concurrency/tests/: CMakeLists.txt  any_sender_tests.cpp  channel_tests.cpp  context_tests.cpp  io_ring_operation_tests.cpp  io_ring_tests.cpp  queue_consumer_tests.cpp  spinner_manager_tests.cpp  spinner_state_machine_tests.cpp  spinner_tests.cpp  spinners_manager_tests.cpp  when_all_range_tests.cpp
modules/conduit/: BUILD  CMakeLists.txt  README.md
modules/conduit/examples/: conduit_clock_drift.cpp  conduit_example.cpp  conduit_graph.cpp  conduit_input_publisher.cpp  conduit_input_subscriber.cpp  conduit_publisher.cpp  conduit_subscriber.cpp  example.cpp  mont-blanc.cpp  mont_blanc.cpp  periodic_spinner.cpp  super_node.cpp
modules/conduit/src/: acceptor.cpp  accumulated_input.cpp  basic_input.cpp  completion_handler.cpp  executor.cpp  input.cpp  node.cpp  node_engine.cpp  output.cpp  partner_output.cpp  queued_input.cpp  remote_input_publisher.cpp  remote_node_handler.cpp  remote_output_subscriber.cpp  zenoh_nodes.cpp
modules/conduit/tests/: basic_input_tests.cpp  distributed_graph_tests.cpp  graph_tests.cpp  input_output_tests.cpp  input_tests.cpp  node_tests.cpp  output_tests.cpp  remote_publisher_tests.cpp  stepper_tests.cpp  zenoh_nodes_tests.cpp  zenoh_publisher_tests.cpp  zenoh_subscriber_tests.cpp
modules/containers/: BUILD  CMakeLists.txt  README.md
modules/containers/benchmarks/: queue_benchmarks.cpp
modules/containers/examples/: CMakeLists.txt  blocking_queue_example.cpp  queue_benchmarks.cpp
modules/containers/src/: bit_flag.cpp  blocking_queue.cpp  intrusive_circular_list.cpp  intrusive_fifo_queue.cpp
modules/containers/tests/: CMakeLists.txt  bit_flag_tests.cpp  blocking_queue_tests.cpp  fixed_circular_buffer_tests.cpp  intrusive_circular_list_tests.cpp  intrusive_fifo_queue_tests.cpp
modules/containers_proto/: BUILD  CMakeLists.txt  README.md
modules/containers_proto/proto/: BUILD  CMakeLists.txt
modules/containers_proto/src/: bit_flag.cpp
modules/containers_proto/tests/: CMakeLists.txt  bitflag_serialization_tests.cpp
modules/containers_reflection/: BUILD  CMakeLists.txt
modules/containers_reflection/src/: bit_flag.cpp  chrono.cpp
modules/containers_reflection/tests/: CMakeLists.txt  containers_reflection_tests.cpp
modules/error_handling/: BUILD  CMakeLists.txt
modules/error_handling/src/: panic.cpp  panic_as_exception_scope.cpp  panic_exception.cpp  panic_exception_.cpp
modules/error_handling/tests/: panic_tests.cpp
modules/examples/: BUILD  CMakeLists.txt  README.md
modules/examples/examples/: CMakeLists.txt  generic_formatter_example.cpp  mcap_reader.cpp  mcap_writer.cpp  serdes_examples.cpp  zenoh_action_server.cpp  zenoh_action_server_client.cpp  zenoh_ipc_graph.cpp  zenoh_program_options.h  zenoh_pub.cpp  zenoh_service_client.cpp  zenoh_service_server.cpp  zenoh_string_service_client.cpp  zenoh_string_service_server.cpp  zenoh_sub.cpp  zenoh_sub_any.cpp
modules/examples/proto/: BUILD  CMakeLists.txt  buf.yaml
modules/examples/tests/: CMakeLists.txt  helpers.h  types_proto_tests.cpp  types_protobuf_tests.cpp  zenoh_tests.cpp
modules/format/: BUILD  CMakeLists.txt  README.md
modules/format/examples/: CMakeLists.txt  generic_formatter_example.cpp
modules/format/src/: generic_formatter.cpp
modules/format/tests/: CMakeLists.txt  formatter_collisions_tests.cpp  generic_formatter_tests.cpp  types_formatter_tests.cpp
modules/ipc/: BUILD  CMakeLists.txt  README.md
modules/ipc/proto/: BUILD  (+1 more)
modules/net/: BUILD  CMakeLists.txt
modules/random/: BUILD  CMakeLists.txt  README.md
modules/serdes/: BUILD  CMakeLists.txt  README.md
modules/telemetry/: CMakeLists.txt  README.md
modules/telemetry_sink/: CMakeLists.txt
modules/test_helpers/: CMakeLists.txt
modules/types/: BUILD  CMakeLists.txt  README.md
modules/types_proto/: BUILD  CMakeLists.txt  README.md
modules/types_protobuf/: CMakeLists.txt  README.md
modules/utils/: BUILD  CMakeLists.txt  README.md  generate_version_file.sh
modules/websocket_bridge/: BUILD  CMakeLists.txt  README.md
modules/ws_bridge/: BUILD  CMakeLists.txt  README.md
(+847 files in other folders)
