# =================================================================================================
# Copyright (C) 2023-2024 HEPHAESTUS Contributors
# =================================================================================================

module(
    name = "hephaestus",
)

bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

##############
# Toolchains #
##############

# LLVM
bazel_dep(name = "toolchains_llvm", version = "1.3.0")
LLVM_COMMIT = "14eb90172b3c5f35bdb2699d006fe0f70e76aa24"
archive_override(
    module_name = "toolchains_llvm",
    url = "https://github.com/bazel-contrib/toolchains_llvm/archive/{commit}.tar.gz".format(commit = LLVM_COMMIT),
    strip_prefix = "toolchains_llvm-{commit}".format(commit = LLVM_COMMIT),
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)

LLVM_VERSIONS = {
    "": "20.1.0",
    "linux-aarch64": "20.1.0",
    "linux-x86_64": "20.1.0",
}

llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {
        "": "c++20",
    },
    llvm_versions = LLVM_VERSIONS,
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# Buf
bazel_dep(name = "rules_buf", version = "0.3.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.34.0")
use_repo(buf, "rules_buf_toolchains")

############################
# Tools                    #
############################

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
COMPILE_COMMANDS_COMMIT = "4f28899228fb3ad0126897876f147ca15026151e"
archive_override(
    module_name = "hedron_compile_commands",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/{commit}.tar.gz".format(commit = COMPILE_COMMANDS_COMMIT),
    strip_prefix = "bazel-compile-commands-extractor-{commit}".format(commit = COMPILE_COMMANDS_COMMIT),
)

############################
# Third-party dependencies #
############################

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "magic_enum", version = "0.9.5")
bazel_dep(name = "fmt", version = "11.1.4")
bazel_dep(name = "protobuf", version = "30.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "eigen", version = "3.4.0")
bazel_dep(name = "curl", version = "8.8.0.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "range-v3", version = "0.12.0")
RANGE_COMMIT = "7e6f34b1e820fb8321346888ef0558a0ec842b8e"
archive_override(
    module_name = "range-v3",
    url = "https://github.com/ericniebler/range-v3/archive/{commit}.tar.gz".format(commit = RANGE_COMMIT),
    strip_prefix = "range-v3-{commit}".format(commit = RANGE_COMMIT),
    sha256 = "8395518e171e5873e51db9ef153a17b5bd46e69a99b64fd6c44b45b53f98d7cf",
)

bazel_dep(name = "boringssl", version = "0.20250114.0")
bazel_dep(name = "websocketpp", version = "0.8.2.bcr.3")
bazel_dep(name = "zstd", version = "1.5.6")
bazel_dep(name = "liburing", version = "2.5")

# TODO: eventually add
# bazel_dep(name = "lz4", version = "1.9.4")

# For details on why we do this: https://bazel.build/external/migration
external_dependencies = use_extension("@hephaestus//bazel:extensions.bzl", "external_dependencies")
use_repo(external_dependencies, "cpr", "influxdb", "mcap", "reflect-cpp", "stdexec", "ws_protocol", "zenohc_builder")
