# =================================================================================================
# Copyright (C) 2023-2024 HEPHAESTUS Contributors
# =================================================================================================

module(
    name = "hephaestus",
)

bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)

##############
# Toolchains #
##############

# LLVM
bazel_dep(name = "toolchains_llvm", version = "1.3.0")

LLVM_COMMIT = "14eb90172b3c5f35bdb2699d006fe0f70e76aa24"

archive_override(
    module_name = "toolchains_llvm",
    sha256 = "d85f78a501d6050fa0f1fb74e1c5f971549cd6d0b9c9147857935c0346c070d0",
    strip_prefix = "toolchains_llvm-{commit}".format(commit = LLVM_COMMIT),
    url = "https://github.com/bazel-contrib/toolchains_llvm/archive/{commit}.tar.gz".format(commit = LLVM_COMMIT),
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)

LLVM_VERSIONS = {
    "": "20.1.0",
    "linux-aarch64": "20.1.0",
    "linux-x86_64": "20.1.0",
}

llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {
        "": "c++20",
    },
    llvm_versions = LLVM_VERSIONS,
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# Buf
bazel_dep(name = "rules_buf", version = "0.3.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.34.0")
use_repo(buf, "rules_buf_toolchains")

############################
# Tools                    #
############################

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

COMPILE_COMMANDS_COMMIT = "4f28899228fb3ad0126897876f147ca15026151e"

archive_override(
    module_name = "hedron_compile_commands",
    sha256 = "658122cfb1f25be76ea212b00f5eb047d8e2adc8bcf923b918461f2b1e37cdf2",
    strip_prefix = "bazel-compile-commands-extractor-{commit}".format(commit = COMPILE_COMMANDS_COMMIT),
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/{commit}.tar.gz".format(commit = COMPILE_COMMANDS_COMMIT),
)

############################
# Documentation tools
############################

bazel_dep(name = "rules_python", version = "1.2.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi-heph",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi-heph")

bazel_dep(name = "rules_doxygen", version = "2.5.0")

doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")

# Download doxygen version 1.10.0 on linux, default version on all other platforms
doxygen_extension.configuration(
    platform = "linux",
    sha256 = "e5d6ae24d0bf3f0cdc4d8f146726b89ca323922f19441af99b1872d503665ad6",
    version = "1.14.0",
)
use_repo(doxygen_extension, "doxygen")

############################
# Third-party dependencies #
############################

bazel_dep(name = "tcmalloc", version = "0.0.0-20250331-43fcf6e")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "magic_enum", version = "0.9.5")
bazel_dep(name = "fmt", version = "11.1.4")
bazel_dep(name = "protobuf", version = "30.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")
bazel_dep(name = "curl", version = "8.8.0.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")

RANGE_COMMIT = "7e6f34b1e820fb8321346888ef0558a0ec842b8e"

bazel_dep(name = "boringssl", version = "0.20250114.0")
bazel_dep(name = "websocketpp", version = "0.8.2.bcr.3")
bazel_dep(name = "zstd", version = "1.5.6")
bazel_dep(name = "liburing", version = "2.5")

# TODO: eventually add
# bazel_dep(name = "lz4", version = "1.9.4")

# For details on why we do this: https://bazel.build/external/migration
external_dependencies = use_extension("@hephaestus//bazel:extensions.bzl", "external_dependencies")
use_repo(external_dependencies, "bluez", "cpr", "influxdb", "mcap", "reflect-cpp", "stdexec", "ws_protocol", "zenohc_builder")
